--- a/taotao-manager/taotao-manager-service/src/main/webapp/WEB-INF/web.xml
+++ b/taotao-manager/taotao-manager-service/src/main/webapp/WEB-INF/web.xml
@@ -16,10 +16,10 @@
   </context-param>
 
   <!-- 加载log4j配置文件 -->
-  <!--<context-param>
+  <context-param>
     <param-name>log4jConfigLocation</param-name>
-    <param-value>classpath:log4j.properties</param-value>
-  </context-param>-->
+    <param-value>classpath:properties/log4j.properties</param-value>
+  </context-param>
 
 
   <listener>
